--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,16 +1,117 @@
 #countries {
 	padding: 20px 0;
 }
+.container-individual-country {
+	padding-top: 65px;
+	padding-bottom: 140px;
+}
+.box-individual-country {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	margin-top: 55px;
+	width: 100%;
+}
+.btn-p-ip {
+	margin-bottom: -4px !important;
+}
+.img-individual-ip {
+	width: 45%;
+	height: 340px;
+}
+.info-individual-ip {
+	margin-top: 30px;
+	display: block !important;
+	height: 100%;
+	width: 45%;
+}
+.title-individual-ip {
+	font-weight: bold !important;
+	font-size: 30px !important;
+}
+.info-container-individual-ip {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 20px;
+	flex-wrap: wrap;
+}
+.info-ul-1,
+.info-ul-2 {
+	width: 45%;
+}
+.info-ul-p {
+	line-height: 27px !important;
+}
+.border-countries {
+	margin-top: 50px;
+	width: 100%;
+}
+.btn-border {
+	margin-right: 5px !important;
+	margin-bottom: 5px !important;
+}
+@media (max-width: 1140px) {
+	.img-individual-ip {
+		height: 310px;
+	}
+}
 
-@media (max-width: 900px) {
-	#countries {
-		padding: 20px 35px;
+@media (max-width: 1040px) {
+	.img-individual-ip {
+		height: 290px;
 	}
 }
 
 @media (max-width: 900px) {
+	.img-individual-ip {
+		height: 320px;
+		width: 60%;
+	}
+	.info-individual-ip {
+		width: 60%;
+	}
 	.country-flag {
 		height: auto;
+	}
+	#countries {
+		padding: 20px 35px;
+	}
+	.box-individual-country {
+		flex-direction: column !important;
+	}
+	.info-ul-1 {
+		width: 100%;
+		margin-bottom: 30px;
+	}
+	.info-ul-2 {
+		width: 100%;
+	}
+	.container-individual-country {
+		padding-bottom: 65px;
+	}
+	.container-individual-country {
+		padding-right: 35px !important;
+		padding-left: 35px !important;
+		padding-top: 30px;
+	}
+}
+
+@media (max-width: 789px) {
+	.img-individual-ip {
+		width: 75%;
+	}
+	.info-individual-ip {
+		width: 75%;
+	}
+}
+
+@media (max-width: 690px) {
+	.css-puhdgc-MuiFormControl-root {
+		margin-bottom: 20px !important;
+	}
+	.css-1v1eqpf-MuiFormControl-root-MuiTextField-root {
+		margin: 20px 0px 30px 0px !important;
 	}
 }
 
@@ -25,13 +126,32 @@
 	#theme-toolbar {
 		font-size: 12px;
 	}
-}
-@media (max-width: 690px) {
-	.css-puhdgc-MuiFormControl-root {
-		margin-bottom: 20px !important;
+	.img-individual-ip {
+		width: 85%;
+		height: 240px;
 	}
-	.css-1v1eqpf-MuiFormControl-root-MuiTextField-root {
-		margin: 20px 0px 30px 0px !important;
+	.info-individual-ip {
+		width: 85%;
+	}
+	.container-individual-country {
+		padding-top: 40px;
 	}
 }
+
+@media (max-width: 450px) {
+	.img-individual-ip {
+		width: 100%;
+		height: 250px;
+	}
+	.info-individual-ip {
+		width: 100%;
+	}
+}
+
+@media (max-width: 380px) {
+	.img-individual-ip {
+		height: 210px;
+	}
+}
+
 /* simple-select-region search-country */
